@startuml
skinparam classAttributeIconSize 0
skinparam classFontName "Consolas"
skinparam classFontSize 12
skinparam shadowing true
skinparam ArrowColor #2E8B57
skinparam ArrowThickness 2

package "Interfaces" {
    interface ICustomCollection<T> {
        + T this[int index] {get; set;}
        + int Count {get;}
        --
        + void Reset()
        + void Next()
        + T Current()
        + void Add(T item)
        + void Remove(T item)
        + T RemoveCurrent()
    }
}

package "Collections" {
    class MyCustomCollection<T> {
        - Node? _head
        - Node? _tail
        - Node? _cursor
        - int _count
    }
}

package "Contracts" {
    interface ITransportService {
        + void AddTarif(Tarif tarif)
        + void AddClient(Client client)
        + void MakeOrder(Client client, Tarif tarif, double weight)
        + double GetClientOrderSum(Client client)
        + double GetTotalOrdersSum()
        + double GetSumByDirection(string direction)
    }
}

package "Entities" {
    enum ClientType {
        Regular
        VIP
    }

    class TransportCompany {
        - ICustomCollection<Tarif> _tarifs
        - ICustomCollection<Client> _clients
        --
        + void AddTarif(Tarif tarif)
        + void AddClient(Client client)
        + void MakeOrder(Client client, Tarif tarif, double weight)
        + double GetClientOrderSum(Client client)
        + double GetTotalOrdersSum()
        + double GetSumByDirection(string direction)
        + Client? FindClientByName(string name)
        + ICustomCollection<Client> GetClients()
        + ICustomCollection<Tarif> GetTarifs()
    }

    class Client {
        - string _name
        - ICustomCollection<Order> _orders
        --
        + string Name {get; set;}
        + ClientType Type {get; set;}
        + void AddOrder(Order order)
        + ICustomCollection<Order> GetOrders()
        + double GetOrdersSum()
    }

    class Tarif {
        + string Direction {get; set;}
        + double CostPerKg {get; set;}
        --
        + Tarif(string direction, double costPerKg)
    }

    class Order {
        + Tarif Tarif {get; set;}
        + double Weight {get; set;}
        --
        + Order(Tarif tarif, double weight)
        + double GetCost()
    }
}

package "Utils" {
    class GenericMathHelper {
        + {static} TNumber Sum<T, TNumber>(ICustomCollection<T> collection, Func<T, TNumber> selector)
    }
}

' Реализация интерфейсов
MyCustomCollection ..|> ICustomCollection
TransportCompany ..|> ITransportService

' Ассоциации
TransportCompany "1" --> "*" Client : manages >
TransportCompany "1" --> "*" Tarif : offers >
Client "1" --> "*" Order : places >
Order "1" --> "1" Tarif : applies >
TransportCompany --> MyCustomCollection : stores in >
Client --> MyCustomCollection : stores in >

@enduml
